# mpn

./: Cargo.toml  justfile
crates/mpn_config/: Cargo.toml
crates/mpn_config/src/: definition.rs  definition_v2.rs  definitions.rs  lib.rs  type_def.rs  util.rs
crates/mpn_config/tests/: definition.rs
crates/mpn_config/tests/snapshots/: definition__basic.snap  definition__deprecated.snap  definition__deprecated_1.snap  definition__exclusive.snap  definition__long_0.snap  definition__long_40.snap  definition__long_9000.snap
lab/: Cargo.toml  lab.js
lab/src/: main.rs
src/: main.rs
