[package]
name = "mpn_config"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doc = false
doctest = false

[dependencies]
derive_builder = "0.20.0"
terminal_size = "0.3.0"
unindent = "0.2.3"

[dev-dependencies]
insta = "1.39.0"
